feat: move map to settings profile and changed gmc settings to hashmap